{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 102,
  "lineage": "537f6ef2-9816-903c-14dc-6cfa14b30725",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "assigment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:547599808692:instance/i-0768f1c8215d96541",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0768f1c8215d96541",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067e34d40fb88f52d",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "public_ip": "54.224.178.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cab4959e971aef6e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068b35efe67c06aac",
            "tags": {
              "Name": "Assgment",
              "purpose": "Assigment"
            },
            "tags_all": {
              "Name": "Assgment",
              "purpose": "Assigment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eff97cdec852bee8"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_key_pair.key-tf",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547599808692:internet-gateway/igw-0216392991e16853c",
            "id": "igw-0216392991e16853c",
            "owner_id": "547599808692",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0e96faf4bd8cea678"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547599808692:route-table/rtb-03f917ab4e6d0af99",
            "id": "rtb-03f917ab4e6d0af99",
            "owner_id": "547599808692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0216392991e16853c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubicRT"
            },
            "tags_all": {
              "Name": "pubicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e96faf4bd8cea678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PSRT-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ccfebed5fa6e636",
            "route_table_id": "rtb-03f917ab4e6d0af99",
            "subnet_id": "subnet-068b35efe67c06aac"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public-subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547599808692:security-group/sg-0badf6850f9540fb0",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0badf6850f9540fb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security",
            "name_prefix": "",
            "owner_id": "547599808692",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e96faf4bd8cea678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547599808692:subnet/subnet-0b2321ef601e407fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2321ef601e407fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "547599808692",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-private-subnet"
            },
            "tags_all": {
              "Name": "Terraform-private-subnet"
            },
            "vpc_id": "vpc-0e96faf4bd8cea678"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547599808692:subnet/subnet-068b35efe67c06aac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068b35efe67c06aac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "547599808692",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-public-subnet"
            },
            "tags_all": {
              "Name": "Terraform-public-subnet"
            },
            "vpc_id": "vpc-0e96faf4bd8cea678"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547599808692:vpc/vpc-0e96faf4bd8cea678",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b77394e9196e2878",
            "default_route_table_id": "rtb-0bab5a7b741b5c511",
            "default_security_group_id": "sg-0eff97cdec852bee8",
            "dhcp_options_id": "dopt-0ea21b9a2b9212f54",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e96faf4bd8cea678",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bab5a7b741b5c511",
            "owner_id": "547599808692",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}